bin/tests/snapshots/devenv_exec_shebang__83910057cc05bc7f6a9a0c30dd02d0fb_fix.snap
---
source: bin/tests/devenv_exec_shebang.rs
---
{ processes = { web = { exec = ''
  #!/usr/bin/env bash
  serve
''; }; }; }
---
