bin/tests/snapshots/devenv_exec_shebang__83910057cc05bc7f6a9a0c30dd02d0fb_lint_stderr.snap
---
source: bin/tests/devenv_exec_shebang.rs
---
{ processes = { web = { exec = ''
  #!/usr/bin/env bash
  serve
''; }; }; }
---
[devenv_exec_shebang] Warning: Shebang in devenv `exec` is ignored
   ╭─[ <temp_file_path>:1:32 ]
   │
 1 │ ╭─▶ { processes = { web = { exec = ''
   ┆ ┆   
 4 │ ├─▶ ''; }; }; }
   │ │                 
   │ ╰───────────────── devenv runs processes.<name>.exec with bash, this shebang is ignored; set package to choose the interpreter
───╯
