bin/tests/snapshots/devenv_exec_shebang__da04cb9acc43a5418f8db1e9b57985ea_fix.snap
---
source: bin/tests/devenv_exec_shebang.rs
---
{ scripts.hello = { package = pkgs.python3; exec = ''
  #!/usr/bin/env python3
  print(1)
''; }; }
---
