bin/tests/snapshots/devenv_exec_shebang__e20398f226569bf82d6acad6b2c7def6_fix.snap
---
source: bin/tests/devenv_exec_shebang.rs
---
{ config.tasks."app:setup".exec = "#!/bin/sh\necho hi"; }
---
