bin/tests/snapshots/devenv_exec_shebang__e20398f226569bf82d6acad6b2c7def6_lint_json.snap
---
source: bin/tests/devenv_exec_shebang.rs
---
{ config.tasks."app:setup".exec = "#!/bin/sh\necho hi"; }
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "devenv_exec_shebang",
      "note": "Shebang in devenv `exec` is ignored",
      "code": 24,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 1,
              "column": 35
            },
            "to": {
              "line": 1,
              "column": 55
            }
          },
          "message": "devenv runs `tasks.<name>.exec` with bash, this shebang is ignored; set `package` to choose the interpreter",
          "suggestion": null,
          "fixable": false
        }
      ]
    }
  ]
}
