bin/tests/snapshots/devenv_exec_shebang__e20398f226569bf82d6acad6b2c7def6_lint_stderr.snap
---
source: bin/tests/devenv_exec_shebang.rs
---
{ config.tasks."app:setup".exec = "#!/bin/sh\necho hi"; }
---
[devenv_exec_shebang] Warning: Shebang in devenv `exec` is ignored
   ╭─[ <temp_file_path>:1:35 ]
   │
 1 │ { config.tasks."app:setup".exec = "#!/bin/sh\necho hi"; }
   │                                   ──────────┬─────────  
   │                                             ╰─────────── devenv runs tasks.<name>.exec with bash, this shebang is ignored; set package to choose the interpreter
───╯
