bin/tests/snapshots/devenv_exec_shebang__f960e34307450195b64502b37fbd98a5_fix.snap
---
source: bin/tests/devenv_exec_shebang.rs
---
{ scripts.hello.exec = ''
  #!/usr/bin/env python3
  print(1)
''; }
---
