bin/tests/snapshots/devenv_exec_shebang__f960e34307450195b64502b37fbd98a5_lint_errfmt.snap
---
source: bin/tests/devenv_exec_shebang.rs
---
{ scripts.hello.exec = ''
  #!/usr/bin/env python3
  print(1)
''; }
---
<temp_file_path>>1:24:W:24:[devenv_exec_shebang] devenv runs `scripts.<name>.exec` with bash, this shebang is ignored; set `package` to choose the interpreter
